// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it: works 1`] = `
Array [
  "1",
  "2",
  "Fizz",
  "4",
  "Buzz",
]
`;

exports[`take: to 3 1`] = `
Array [
  "1",
  "2",
  "Fizz",
]
`;

exports[`take: to 10 from 5 1`] = `
Array [
  "Buzz",
  "Fizz",
  "7",
  "8",
  "Fizz",
  "Buzz",
]
`;

exports[`take: to 30 1`] = `
Array [
  "1",
  "2",
  "Fizz",
  "4",
  "Buzz",
  "Fizz",
  "7",
  "8",
  "Fizz",
  "Buzz",
  "11",
  "Fizz",
  "13",
  "14",
  "FizzBuzz",
  "16",
  "17",
  "Fizz",
  "19",
  "Buzz",
  "Fizz",
  "22",
  "23",
  "Fizz",
  "Buzz",
  "26",
  "Fizz",
  "28",
  "29",
  "FizzBuzz",
]
`;
